--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.14.6
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
+	loader_version=0.14.14
 
 # Mod Properties
 	mod_version = 0.1
@@ -13,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = smallpop
 
 # Dependencies
-	fabric_version=0.53.0+1.18.2
+	fabric_version=0.75.1+1.19.2
